vlib/v/checker/tests/void_function_assign_to_string.out
vlib/v/checker/tests/void_function_assign_to_string.vv:6:4: error: assignment mismatch: 1 variable(s) but `x()` returns 0 value(s)
    4 | fn main(){
    5 |     mut a := ''
    6 |     a = x(1,2) // hello
      |       ^
    7 |     eprintln('a: $a')
    8 | }
